--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.2",
+    "react-native-paystack-webview": "^4.0.3",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
